plugins {
  id "architectury-plugin" version "3.4-SNAPSHOT"
  id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
  id "com.palantir.git-version" version "0.15.0"
  id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        // The following line declares the mojmap mappings, you may use other mappings as well
        mappings loom.officialMojangMappings()
        // The following line declares the yarn mappings you may select this one as well.
        // mappings "net.fabricmc:yarn:1.19.2+build.3:v2"
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"
    apply plugin: "com.palantir.git-version"

    archivesBaseName = rootProject.archives_base_name
    def matcher = gitVersion() =~ /^v(\d+\.\d+\.\d+.*)/
    matcher.find()
    if(matcher.groupCount() >= 1)
        version = matcher.group(1)
    else
        version = "dev"
    group = rootProject.maven_group

    repositories {
      // Add repositories to retrieve artifacts from in here.
      // You should only use this when depending on other mods because
      // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
      // See https://docs.gradle.org/current/userguide/declaring_repositories.html
      // for more information about repositories.
      maven { url 'https://maven.blamejared.com' }
      maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
      }
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 21
    }

    java {
        withSourcesJar()
    }
}
